# prelude

./: .gitignore  Main.hs  README.md  prelude.cabal  shell.nix
src/: Prelude.hs
test/: Main.hs
