cabal-version:       2.4

name:                prelude
version:             0.1.0.0
author:              Cameron Dart
maintainer:          cdart@anduril.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Prelude
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite prelude-properties
  type:                exitcode-stdio-1.0
  main-is:             test/Main.hs
  build-depends:       base
  default-language:    Haskell2010

